<resources>
    <string name="app_name">My Application</string>
    <string name="my_account">My Account</string>
    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="create">Create</string>
    <string name="other">other</string>
    <string name="contact">Contact</string>
    <string name="privacy">Privacy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="wallet">Wallet</string>
    <string name="results">Results</string>
</resources>